# LinWin10

./: README.md
fixes/: CMakeLists.txt  main.cpp  main.qml  resources.qrc
menu/: CMakeLists.txt  main.cpp  main.qml  resources.qrc
